# masa-store

./: .gitignore  README.md  codebase.md  pyproject.toml
grocery_project/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  forms.py  models.py  urls.py
store/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_basket_created_at_basket_updated_at_and_more.py
store/templates/store/: base.html  home.html  login.html  register.html
store/templates/store/customer/: basket_history.html  shop_home.html  view_basket.html
store/templates/store/staff/: basket_detail.html  basket_list.html  product_confirm_delete.html  product_form.html  product_list.html  staff_dashboard.html
store/templatetags/: store_extras.py
store/views/: __init__.py  auth_views.py  customer_views.py  home_views.py  staff_views.py
